<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.florencenjeri.readinglist.MainActivity">
    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic__sort"
        android:title="@string/sort"
        app:showAsAction="ifRoom">

        <!--    Genre submenu-->

        <menu>
            <group
                android:id="@+id/menu_sort_group"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/action_fiction"
                    android:checked="false"
                    android:title="@string/fiction" />
                <item
                    android:id="@+id/action_self_help"
                    android:title="@string/self_help" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_log_out"
        android:title="@string/log_out"
        app:showAsAction="ifRoom" />

</menu>