<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/ic_undraw_book_reading" />

    <!--Email Input View-->
    <LinearLayout style="@style/LinearLayoutEditText">


        <ImageView
            android:id="@+id/image_name"
            style="@style/ImageStyle"
            android:contentDescription="@string/email_icon"
            app:srcCompat="@drawable/ic_email" />

        <EditText
            android:id="@+id/editTextEmail"
            style="@style/EditText"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            app:errorEnabled="true" />

    </LinearLayout>
    <!--Password Input View-->
    <LinearLayout style="@style/LinearLayoutEditText">


        <ImageView
            android:id="@+id/password_icon"
            style="@style/ImageStyle"
            android:contentDescription="@string/password_icon"
            app:srcCompat="@drawable/ic_password" />

        <EditText
            android:id="@+id/editTextPassword"
            style="@style/EditText"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            app:errorEnabled="true" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:background="@drawable/rounded_blue_background"
        android:fontFamily="@font/brandon_grotesque"
        android:text="Log In"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>