<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin"
    android:layout_marginLeft="@dimen/margin"
    android:layout_marginRight="@dimen/margin"
    android:elevation="@dimen/card_elevation"
    app:cardCornerRadius="@dimen/corner_radius"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/cover"
        android:layout_width="@dimen/book_cover_width"
        android:layout_height="@dimen/book_cover_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/girl_wash_your_face" />

    <TextView
        android:id="@+id/book_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/book_title"
        android:textColor="@color/primary_text"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/cover"
        app:layout_constraintTop_toTopOf="@+id/cover" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:fontFamily="@font/avenir_next_pro"
        android:text="@string/text_author"
        android:textColor="@color/secondary_text"
        app:layout_constraintEnd_toEndOf="@+id/book_title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/book_title"
        app:layout_constraintTop_toBottomOf="@+id/book_title" />

    <TextView
        android:id="@+id/num_pages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:fontFamily="@font/avenir_next_pro"
        android:text="@string/text_pages"
        android:textColor="@color/secondary_text"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/publication_date"
        app:layout_constraintTop_toBottomOf="@+id/publication_date" />

    <TextView
        android:id="@+id/publication_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:fontFamily="@font/avenir_next_pro"
        android:text="@string/text_pub_date"
        android:textColor="@color/secondary_text"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <Button
        android:id="@+id/genre"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_marginEnd="@dimen/margin"
        android:background="@drawable/rounded_blue_background"
        android:fontFamily="@font/avenir_next_pro"
        android:text="@string/text_genre"
        android:paddingRight="@dimen/margin"
        android:paddingLeft="@dimen/margin"
        android:textAllCaps="false"
        android:textColor="@color/icons"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toBottomOf="@+id/num_pages"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/num_pages" />
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>